# fRTPlib

./: .gitignore  CMakeLists.txt  build_ios.sh  build_ios_example.sh  build_linux.sh  build_mac.sh  build_mac_example.sh  build_windows.sh  build_windows_example.sh
cmake/: cmake_util.cmake
cmake/toolchains/: android.cmake  ios.cmake  linux.cmake  mac.cmake  windows.cmake
example/: CMakeLists.txt
example/mac/rtpdemo/: CMakeLists.txt
example/mac/rtpdemo/rtpdemo/: AppDelegate.h  AppDelegate.m  RtpViewController.h  RtpViewController.mm  ViewController.h  ViewController.m  main.m
example/mac/rtpdemo/rtpdemo.xcodeproj/: project.pbxproj
example/mac/rtpdemo/rtpdemo/Base.lproj/: Main.storyboard
src/: frtp.cpp  frtp.h
